Fix meganav links

--- a/core/lib/generators/spree/install/templates/config/spree_storefront.yml
+++ b/core/lib/generators/spree/install/templates/config/spree_storefront.yml
@@ -1,7 +1,6 @@
 default:
   navigation:
-    -
-      title: Women
+    - title: Women
       subtitle: Categories
       url: /t/women
       items:
@@ -18,59 +17,51 @@ default:
         - :title: Jackets and Coats
           :url: /t/women/jackets-and-coats
       promo_banners:
-        -
-          subtitle: New collection
+        - subtitle: New collection
           title: Summer 2019
           url: /t/summer-collection
           image: 'meganav/promo_banner_left-first-category.jpg'
-        -
-          subtitle: Special Offers
+        - subtitle: Special Offers
           title: Get up to 30% off
           url: /t/special-offers
           image: 'meganav/promo_banner_right-first-category.jpg'
-    -
-      title: Men
+    - title: Men
       subtitle: Categories
       url: /t/men
       items:
         - :title: Shirts
-          :url: men/shirts
+          :url: /t/men/shirts
         - :title: T-shirts
-          :url: men/t-shirts
+          :url: /t/men/t-shirts
         - :title: Sweaters
-          :url: men/sweaters
+          :url: /t/men/sweaters
         - :title: Jackets and Coats
-          :url: men/jackets-and-coats
+          :url: /t/men/jackets-and-coats
       promo_banners:
-        -
-          subtitle: New collection
+        - subtitle: New collection
           title: Summer 2019
           url: /t/summer-collection
           image: 'meganav/promo_banner_left-second-category.jpg'
-        -
-          subtitle: Special Offers
+        - subtitle: Special Offers
           title: Get up to 30% off
           url: /t/special-offers
           image: 'meganav/promo_banner_right-second-category.jpg'
-    -
-      title: Sportswear
+    - title: Sportswear
       subtitle: Categories
       url: /t/sportswear
       items:
-      - :title: Tops
-        :url: sportswear/tops
-      - :title: Sweatshirts
-        :url: sportswear/sweatshirts
-      - :title: Pants
-        :url: sportswear/pants
+        - :title: Tops
+          :url: /t/sportswear/tops
+        - :title: Sweatshirts
+          :url: /t/sportswear/sweatshirts
+        - :title: Pants
+          :url: /t/sportswear/pants
       promo_banners:
-        -
-          subtitle: New collection
+        - subtitle: New collection
           title: Summer 2019
           url: /t/summer-collection
           image: 'meganav/promo_banner_left-third-category.jpg'
-        -
-          subtitle: Special Offers
+        - subtitle: Special Offers
           title: Get up to 30% off
           url: /t/special-offers
           image: 'meganav/promo_banner_right-third-category.jpg'
