--- a/core/lib/generators/spree/install/templates/config/spree_storefront.yml
+++ b/core/lib/generators/spree/install/templates/config/spree_storefront.yml
@@ -19,11 +19,11 @@ default:
       promo_banners:
         - subtitle: New collection
           title: Summer 2019
-          url: /t/summer-collection
+          url: /t/new-collection/summer-2019
           image: 'meganav/promo_banner_left-first-category.jpg'
         - subtitle: Special Offers
           title: Get up to 30% off
-          url: /t/special-offers
+          url: /t/special-offers/30-off
           image: 'meganav/promo_banner_right-first-category.jpg'
     - title: Men
       subtitle: Categories
@@ -40,11 +40,11 @@ default:
       promo_banners:
         - subtitle: New collection
           title: Summer 2019
-          url: /t/summer-collection
+          url: /t/new-collection/summer-2019
           image: 'meganav/promo_banner_left-second-category.jpg'
         - subtitle: Special Offers
           title: Get up to 30% off
-          url: /t/special-offers
+          url: /t/special-offers/30-off
           image: 'meganav/promo_banner_right-second-category.jpg'
     - title: Sportswear
       subtitle: Categories
@@ -59,9 +59,9 @@ default:
       promo_banners:
         - subtitle: New collection
           title: Summer 2019
-          url: /t/summer-collection
+          url: /t/new-collection/summer-2019
           image: 'meganav/promo_banner_left-third-category.jpg'
         - subtitle: Special Offers
           title: Get up to 30% off
-          url: /t/special-offers
+          url: /t/special-offers/30-off
           image: 'meganav/promo_banner_right-third-category.jpg'
