Fixed update staging repository job declaration
As per doc - this should be a list object https://circleci.com/docs/2.0/configuration-reference/#branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,4 +189,5 @@ workflows:
       - update_staging_repository:
           filters:
             branches:
-              only: 4-1-stable
+              only: 
+                - 4-1-stable
