--- a/guides/package.json
+++ b/guides/package.json
@@ -10,6 +10,7 @@
     "emotion-server": "^10.0.9",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.2.19",
+    "gatsby-plugin-canonical-urls": "^2.2.1",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-google-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.0.5",
