--- a/guides/package.json
+++ b/guides/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.0.11",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sharp": "2.2.36",
     "gatsby-plugin-sitemap": "^2.0.10",
