--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -55,10 +55,25 @@ paths:
       tags:
         - Account
       operationId: 'Account Creation'
-      parameters:
-        - $ref: '#/components/parameters/UserEmail'
-        - $ref: '#/components/parameters/UserPassword'
-        - $ref: '#/components/parameters/UserPasswordConfirmation'
+      requestBody:
+        required: true
+        content:
+          application/vnd.api+json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      example: 'john@snow.org'
+                    password:
+                      type: string
+                      example: 'spree123'
+                    password_confirmation:
+                      type: string
+                      example: 'spree123'
       responses:
         '200':
           description: ok
@@ -72,9 +87,6 @@ paths:
             application/vnd.api+json:
               schema:
                 $ref: '#/components/schemas/Error'
-      security:
-        - bearerAuth: []
-
   '/account/credit_cards':
     get:
       description: >-
@@ -2456,24 +2468,6 @@ components:
         name: 'John Doe'
 
   parameters:
-    UserEmail:
-      in: query
-      name: email
-      schema:
-        type: string
-      description: User email
-    UserPassword:
-      in: query
-      name: password
-      schema:
-        type: string
-      description: User password
-    UserPasswordConfirmation:
-      in: query
-      name: password_confirmation
-      schema:
-        type: string
-      description: User password
     CreditCardIncludeParam:
       name: include
       in: query
