--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -63,6 +63,16 @@ paths:
                     password_confirmation:
                       type: string
                       example: spree123
+                    public_metadata:
+                      type: object
+                      example:
+                        number_of_orders: 0
+                      description: The public metadata for this User
+                    private_metadata:
+                      type: object
+                      example:
+                        has_abandoned_cart: false
+                      description: The private metadata for this User
         description: ''
       responses:
         '200':
@@ -3470,6 +3480,16 @@ components:
               type: number
               example: 3
               description: Number of placed Orders by this User
+            public_metadata:
+              type: object
+              example:
+                number_of_orders: 0
+              description: The public metadata for this User
+            private_metadata:
+              type: object
+              example:
+                has_abandoned_cart: false
+              description: The private metadata for this User
         relationships:
           type: object
           properties:
@@ -4889,6 +4909,10 @@ components:
                     email: spree@example.com
                     store_credits: 0
                     completed_orders: 0
+                    public_metadata:
+                      number_of_orders: 0
+                    private_metadata:
+                      has_abandoned_cart: false
                   relationships:
                     default_billing_address:
                       data:
