--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -432,11 +432,21 @@ paths:
               example:
                 variant_id: '1'
                 quantity: 5
+                public_metadata:
+                  first_item_order: true
+                private_metadata:
+                  recommended_by_us: false
               properties:
                 variant_id:
                   type: string
                 quantity:
                   type: integer
+                public_metadata:
+                  type: object
+                  description: 'The public metadata for the added item.'
+                private_metadata:
+                  type: object
+                  description: 'The private metadata for the added item.'
                 options:
                   type: object
                   description: 'Additional custom options. Activate these by adding: `Spree::PermittedAttributes.line_item_attributes << :foo` in `config/initializers/spree.rb`'
@@ -2611,6 +2621,11 @@ components:
             display_inluded_tax_total:
               type: string
               example: $0.00
+            public_metadata:
+              type: object
+              example:
+                recommended_by_us: true
+              description: 'The public metadata for the Line Item.'
         relationships:
           type: object
           properties:
