Config brakeman in codeclimate.yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,12 @@ version: "2"
 plugins:
   brakeman:
     enabled: true
+    config:
+      app_path:
+        - "api/"
+        - "core/"
+        - "emails/"
+      skip_files: "api/app/controllers/spree/api/v1"
   rubocop:
     enabled: true
     checks:
