--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,11 @@ jobs:
             - spree-brakeman-{{ .Branch }}
             - spree-brakeman
       - run:
+          name: Ensure Bundle Install
+          command: |
+            bundle install
+            ./bin/build-ci.rb install
+      - run:
           name: Brakeman Spree API
           command: |
             bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/
