--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
       - run:
           name: Brakeman Spree API
           command: |
-            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/
+            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/ --no-exit-on-warn --no-exit-on-error
       - save_cache:
           key: spree-brakeman-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
