--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,14 +106,14 @@ jobs:
             - spree-brakeman-{{ .Branch }}
             - spree-brakeman
       - run:
-          name: Ensure Brakeman Installed
+          name: Ensure Bundle Install
           command: |
-            gem install brakeman -v 4.3.1 && bundle install
+            bundle install
             ./bin/build-ci.rb install
       - run:
           name: Brakeman Spree API
           command: |
-            brakeman -p api/ --skip-files app/controllers/spree/api/v1/ --no-exit-on-warn --no-exit-on-error
+            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/ --no-exit-on-warn --no-exit-on-error
       - save_cache:
           key: spree-brakeman-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
