Setup output format and artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,11 +113,14 @@ jobs:
       - run:
           name: Run Brakeman spree/api
           command: |
-            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/ --no-exit-on-warn --no-exit-on-error
+            mkdir /tmp/brakeman
+            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/ -o /tmp/brakeman/api_output.json --no-exit-on-warn
       - run:
           name: Run Brakeman spree/core
           command: |
-            bundle exec brakeman -p core/ --no-exit-on-warn --no-exit-on-error
+            bundle exec brakeman -p core/ -o /tmp/brakeman/core_output.json --no-exit-on-warn
+      - store_artifacts:
+          path: /tmp/brakeman
       - save_cache:
           key: spree-brakeman-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
