--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,7 @@ jobs:
       - run:
           name: Run Brakeman spree/core
           command: |
-            bundle exec brakeman -p core/ --format junit --ignore-config brakeman.ignore --exit-on-warn --exit-on-error
+            bundle exec brakeman -p core/ --format junit --ignore-config core/brakeman.ignore --exit-on-warn --exit-on-error
       - save_cache:
           key: spree-brakeman-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
