--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,11 +113,11 @@ jobs:
       - run:
           name: Run Brakeman spree/api
           command: |
-            bundle exec brakeman -p api/ --format junit --skip-files app/controllers/spree/api/v1/ --exit-on-warn --exit-on-error
+            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/ --exit-on-warn --exit-on-error
       - run:
           name: Run Brakeman spree/core
           command: |
-            bundle exec brakeman -p core/ --format junit --ignore-config core/brakeman.ignore --exit-on-warn --exit-on-error
+            bundle exec brakeman -p core/ --ignore-config core/brakeman.ignore --exit-on-warn --exit-on-error
       - save_cache:
           key: spree-brakeman-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
