VEN-99 Run brakeman (#11537)
* brakeman wip

* Setup brakeman config

* Config brakeman in codeclimate.yml

* Force scan with brakeman

* Edit brakeman config

* Brakeman

* Lock brakeman version

* Inline config for brakeman

* Setup brakeman for Spree API - CircleCI

* Run brakeman job

* Fix mistake in circleci config

* Ensure bundle install before running brakeman

* ensure Brakeman installing

* Ensure bundle installed

* Do not exit on warn and error - Brakeman

* Do not run brakeman with bundle

* Up brakeman version

* Setup brakeman for spree/core

* Setup output format and artifacts

* Fix brakeman issues

* Revert secure sql interpolation

* Fail build on brakeman warning

* Ignore some brakeman issues, crash on warning

* Fix brakeman ignore file path

* Change brakeman output format to text

* Test to see if it fails on warning

* Ignore warning

Co-authored-by: Damian Legawiec <damian@getvendo.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,32 @@ jobs:
           paths:
             - ~/spree/vendor/bundle
 
+  brakeman:
+    <<: *defaults_3_0
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - spree-brakeman-{{ .Branch }}
+            - spree-brakeman
+      - run:
+          name: Ensure Bundle Install
+          command: |
+            bundle install
+            ./bin/build-ci.rb install
+      - run:
+          name: Run Brakeman spree/api
+          command: |
+            bundle exec brakeman -p api/ --skip-files app/controllers/spree/api/v1/ --exit-on-warn --exit-on-error
+      - run:
+          name: Run Brakeman spree/core
+          command: |
+            bundle exec brakeman -p core/ --ignore-config core/brakeman.ignore --exit-on-warn --exit-on-error
+      - save_cache:
+          key: spree-brakeman-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+          paths:
+            - ~/spree/vendor/bundle
+
   tests_postgres: &tests_postgres
     <<: *run_tests
     environment: &postgres_environment
@@ -262,6 +288,9 @@ workflows:
     jobs:
       - bundle
       - bundle_ruby_3_0
+      - brakeman:
+          requires:
+            - bundle_ruby_3_0
       - tests_postgres:
           requires:
             - bundle
