Switch from mini_magick to Ruby VIPS
https://edgeguides.rubyonrails.org/upgrading_ruby_on_rails.html#active-storage-default-variant-processor-changed-to-vips

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ run_tests: &run_tests
           - spree-bundle-v10-ruby-2-7-{{ .Branch }}
           - spree-bundle-v10-ruby-2-7
     - run:
+        name: Install libvips
+        command: sudo apt-get install libvips
+    - run:
         name: Ensure Bundle Install
         command: |
           bundle install
@@ -53,6 +56,9 @@ run_tests_3_0: &run_tests_3_0
         keys:
           - spree-bundle-v10-ruby-3-0-{{ .Branch }}
           - spree-bundle-v10-ruby-3-0
+    - run:
+        name: Install libvips
+        command: sudo apt-get install libvips
     - run:
         name: Ensure Bundle Install
         command: |
@@ -80,6 +86,9 @@ jobs:
             - spree-bundle-v10-ruby-2-7-{{ .Branch }}
             - spree-bundle-v10-ruby-2-7
       - run:
+          name: Install libvips
+          command: sudo apt-get install libvips
+      - run:
           name: Bundle Install
           command: |
             bundle check || bundle install
@@ -97,6 +106,9 @@ jobs:
           keys:
             - spree-bundle-v10-ruby-3-0-{{ .Branch }}
             - spree-bundle-v10-ruby-3-0
+      - run:
+          name: Install libvips
+          command: sudo apt-get install libvips
       - run:
           name: Bundle Install
           command: |
@@ -197,6 +209,9 @@ jobs:
           keys:
             - spree-bundle-v10-ruby-3-0-{{ .Branch }}
             - spree-bundle-v10-ruby-3-0
+      - run:
+          name: Install libvips
+          command: sudo apt-get install libvips
       - run:
           name: Ensure Bundle Install
           command: |
